<resources>
    <string name="app_name">eCibCoin</string>
    <string name="startimage">startimage</string>
    <string name="bine_ati_venit">Bine ati venit!</string>
    <string name="cont_nou">Cont nou</string>
    <string name="conectare">Conectare</string>
    <string name="creare_cont">Creare cont</string>
    <string name="nume_utilizator">Nume utilizator</string>
    <string name="parola_new_user">Parola</string>
    <string name="email_new_user">Email</string>
    <string name="confirma_parola">Confirma parola</string>
    <string name="login_image">login image</string>
    <string name="utilizator_login_page">Utilizator</string>
    <string name="parola_logare_user">Parola</string>
    <string name="logare_in_cont">Logare</string>
    <string name="nu_ai_cont">Nu ai cont?</string>
    <string name="creati_go_to_create_page">Creaza</string>
    <string name="unul">unul!</string>
    <string name="ti_ai_uitat_parola">Ti-ai uitat parola?</string>
    <string name="tv_recupereaza_parola">Recupereaza!</string>
    <string name="ai_deja_cont">Ai deja cont?</string>
    <string name="logheaza_te">Logheaza-te</string>
    <string name="google">Google</string>
    <string name="email_cont_nou">Email</string>
    <string name="browser_web">Browser</string>
    <string name="string_browser_web">browser</string>
    <string name="string_string_browser_web">values</string>
    <string name="browser_web1">browser</string>

    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="main_home_title">Home</string>
    <string name="main_contact_title">Contact</string>
    <string name="main_message">Optiunea %1$s a fost apasata!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">eCibCoin</string>
    <string name="nav_header_subtitle">Criptomonedele mai aproape</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="main_nav_home_title">Acasa</string>
    <string name="browser">Browser</string>
    <string name="bine_ati_venit_in_meniul_principal_al_aplicatiei_ecibcoin">Bine ati venit in meniul principal al aplicatiei eCibCoin</string>
    <string name="criptomonede">Criptomonede</string>
    <string name="browser_web_meniu_principal">Browser web</string>
    <string name="despre_cripto">Despre</string>
    <string name="social_media">Social Media</string>
    <string name="feedback">Feedback</string>
    <string name="stiri">Stiri</string>
    <string name="nume_feedback">Nume</string>
    <string name="email_feedback">Email</string>
    <string name="mesaj_feedback">Mesaj</string>
    <string name="trimite_feedback">Trimite Feedback</string>
    <string name="vizualizeaza_feedback">Vizualizeaza Feedback</string>
    <string name="notite">Notite</string>
    <string name="evenimente">Evenimente</string>
    <string name="introduceti_o_nota">Introduceti o nota</string>
    <string name="notele_existente">Notele existente</string>
    <string name="salvare">Salvare</string>
    <string name="string_salvare">Salvare Nota</string>
    <string name="note_main_menu">Note</string>
    <string name="notes">Notes</string>

    <string name="notes_no_characters_error_message">Prea multe caractere</string>
    <string name="notes_updated">Updated at: %1$s</string>
    <string name="notes_template">%1$d/1000 characters</string>
    <string name="save_message">Nota salvata cu succes</string>
    <string name="lista_cu_evenimentele_salvate">Lista cu evenimentele salvate</string>
    <string name="salveaza_evenimentul">Salveaza evenimentul</string>
    <string name="adresa_evenimentului">Adresa Evenimentului</string>
    <string name="numele_evenimentului">Numele Evenimentului</string>
    <string name="adaugati_un_eveniment">Adaugati un eveniment</string>
    <string name="adresa_evenimentului_display">Adresa Evenimentului</string>
    <string name="numele_evenimentului_display">Numele Evenimentului</string>
    <string name="introduceti_numele_evenimentului_update">Introduceti numele evenimentului</string>
    <string name="introduceti_adresa_evenimentului_update">Introduceti adresa evenimentului</string>
    <string name="actualizati_evenimentul">Actualizati Evenimentul</string>
    <string name="stergeti_evenimentul">Stergeti Evenimentul</string>

</resources>