<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/update"
    tools:context=".Utilizator.Evenimente">
    <EditText android:id="@+id/idEdtEventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColorHint="@color/white"
        android:hint="@string/introduceti_numele_evenimentului_update"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:importantForAutofill="no"
        android:inputType="text"/>
    <EditText android:id="@+id/idEdtEventAdress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/introduceti_adresa_evenimentului_update"
        android:minHeight="48dp"
        android:importantForAutofill="no"
        android:inputType="text"/>
    <Button android:id="@+id/idBtnUpdateEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#00FFFFFF"
        android:text="@string/actualizati_evenimentul"
        android:textAllCaps="false"/>
    <Button android:id="@+id/idBtnDeleteEvent"
        android:layout_width="match_parent"
        android:background="#00FFFFFF"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/stergeti_evenimentul"
        android:textAllCaps="false"/>
</LinearLayout>