<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Logare">


    <ImageView
        android:id="@+id/imgViewLoginPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/loginpage"
        android:contentDescription="@string/login_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
         />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_UtilizatorLogare"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="400dp"
        android:textColorHint="#10AFC5"
        app:layout_constraintBottom_toBottomOf="@+id/imgViewLoginPage"
        app:layout_constraintEnd_toEndOf="@+id/imgViewLoginPage"
        app:layout_constraintStart_toStartOf="@+id/imgViewLoginPage"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietUtilizatorLogare"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#00FFFFFF"
            android:hint="@string/utilizator_login_page"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_ParolaParolaLogareUser"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="300dp"
        android:textColorHint="#10AFC5"
        app:layout_constraintBottom_toBottomOf="@+id/imgViewLoginPage"
        app:layout_constraintEnd_toEndOf="@+id/imgViewLoginPage"
        app:layout_constraintStart_toStartOf="@+id/imgViewLoginPage"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietParolaLogareUser"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#00FFFFFF"
            android:hint="@string/parola_logare_user"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogare_cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/logare_in_cont"
        android:textColor="@color/teal_200"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.755"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.642" />

    <TextView
        android:id="@+id/tvLoginPage"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="@string/nu_ai_cont"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgViewLoginPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

    <TextView
        android:id="@+id/tvGoToCreateAccPage"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="@string/creati_go_to_create_page"
        android:textColor="#651FFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgViewLoginPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

    <TextView
        android:id="@+id/tvLoginPage2"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="@string/unul"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgViewLoginPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />




</androidx.constraintlayout.widget.ConstraintLayout>
