<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/adaugareevenimente"
    android:layout_height="match_parent"

    tools:context=".Utilizator.Evenimente">

    <TextView android:id="@+id/twAdaugaEveniment"
        android:layout_width="380dp"
        android:layout_height="154dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="142dp"
        android:elegantTextHeight="true"
        android:text="@string/adaugati_un_eveniment"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171"/>
    <EditText android:id="@+id/eventName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10" android:gravity="center"
        android:hint="@string/numele_evenimentului"
        android:textColor="@color/white"
        android:minHeight="48dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427"
        android:importantForAutofill="no"
        android:inputType="text" />
    <EditText android:id="@+id/adresa"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10" android:gravity="center"
        android:hint="@string/adresa_evenimentului"
        android:textColor="@color/white"
        android:minHeight="48dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529"
        android:importantForAutofill="no"
        android:inputType="text" />
    <Button android:id="@+id/btnSaveEveniment"
        android:layout_width="371dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:background="#00FFFFFF"
        android:text="@string/salveaza_evenimentul"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.696"/>
    <Button android:id="@+id/ShowEvents"
        android:layout_width="368dp"
        android:textStyle="bold"
        android:layout_height="48dp"
        android:background="#00FFFFFF"
        android:text="@string/lista_cu_evenimentele_salvate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.782"/>
</androidx.constraintlayout.widget.ConstraintLayout>